start implementation of drag n drop functionallity

--- a/styles/BookList.module.css
+++ b/styles/BookList.module.css
@@ -4,9 +4,14 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 1rem;
+    min-height: 300px;
     
 }
 
 .book img {
     width: 10rem;
+}
+
+.drag-over{
+    background-color: red;
 }
