--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1,14 +1,18 @@
 .main {
   display: flex;
+
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
   padding: 6rem;
   min-height: 100vh;
 }
 
 .description {
-  /* display: inherit; */
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+
   justify-content: inherit;
   align-items: inherit;
   font-size: 0.85rem;
