--- a/styles/BookList.module.css
+++ b/styles/BookList.module.css
@@ -5,6 +5,7 @@
     justify-content: space-evenly;
     gap: 1rem;
     min-height: 300px;
+    position: relative;
     
 }
 
@@ -12,6 +13,37 @@
     width: 10rem;
 }
 
+.droppableRead{
+    border: 2px solid white;
+    position: relative;
+    margin-top: 30px;
+}
+
+.droppableRead>a:nth-child(n){
+    transform: rotate(-5deg);
+    right: 70px;
+    position: absolute;
+    top: calc(n*50px)
+}
+
+.droppableRead>a:nth-child(2n){
+    transform: rotate(0);;
+    right: 50px;
+    top: 50px;
+    top: calc(2n*50px)
+}
+
+.droppableRead>a:nth-child(3n){
+    transform: rotate(5deg);
+    left: 130px;
+    top:100px;
+    top: calc(3n*50px)
+}
+
 .drag-over{
     background-color: red;
+}
+
+.droppableAvailable{
+    border: 2px dashed green;
 }
