css styles and animation, add help for drag and drop

--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -6,6 +6,9 @@
   /* align-items: center; */
   padding: 6rem;
   min-height: 100vh;
+  background-image: url('../src/library1.jpg');
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .description {
