--- a/styles/BookList.module.css
+++ b/styles/BookList.module.css
@@ -4,7 +4,7 @@
 
 .droppableRead-container {
     display: flex;    
-    background-color: green;
+   /*  background-color: green; */
     min-height: 300px;
     flex-direction: column;
     transition: all 0.3s linear;    
@@ -23,36 +23,13 @@
     width: 10rem;
 }
 
-.droppableRead {    
-   /*  position: relative; */
-   /*  margin-top: 30px; */
-    transition: all 0.3s linear;    
+.droppableRead { 
+    transition: all 0.2s linear;    
 }
 
-/* .droppableRead>a:nth-child(n) {
-    transform: rotate(-5deg);
-    right: 70px;
-    position: absolute;
-    top: calc(n*50px)
-}
-
-.droppableRead>a:nth-child(2n) {
-    transform: rotate(0);
-    right: 50px;
-    top: 50px;
-    top: calc(2n*50px)
-}
-
-.droppableRead>a:nth-child(3n) {
-    transform: rotate(5deg);
-    left: 130px;
-    top: 100px;
-    top: calc(3n*50px)
-} */
-
-.drag-over {
+/* .drag-over {
     background-color: red;
-}
+} */
 
 .droppableAvailable {
     border: 2px dashed green;
