--- a/styles/Library.module.css
+++ b/styles/Library.module.css
@@ -65,15 +65,75 @@
 
 
   .available-list{
+    margin-top: 1.5rem;
     width: 60%;
-    background-color: cyan;
+    background-color: rgba(70,70,70, 0.8);
+    border-radius: 10px;
+    box-shadow: 8px 8px 4px rgba(150,150,150, 1);
+    padding: 16px;
   }
 
   .readable-list{
+    margin-top: 1.5rem;
     width: 25%;
-    background-color: gray;
+    background-color: rgba(70,70,70, 0.8);
+    border-radius: 10px;
+    box-shadow: 8px 8px 4px rgba(150,150,150, 1);
+    padding: 16px;
   }
 
   .filters{
     width: 100%;
   }
+
+  .help-span{   
+    width: 100%;
+    display: block;
+    border-radius: 10px;
+    animation: flash-help 1s ease-in-out 0s infinite;
+    border: 2px rgba(250,250,250, 1) dashed;
+  }
+
+  @keyframes flash-help {
+   /*  0% {
+      border: 2px rgba(250,250,250, 1) dashed;
+    } */
+    50% {
+      border: 2px rgba(250,250,250, 0) dashed;
+    }
+    100%{
+      border: 2px rgba(250,250,250, 1) dashed;
+    }
+  }
+
+  .arrow-help{
+    background-color: green;
+    border: white 3px solid;
+    clip-path: polygon(0 0,33% 0, 66% 50%, 33% 100%, 0 100%, 33% 50%);
+    width: 50px;
+    height: 50px;
+  }
+
+  .hide-help{
+    animation: none;
+    border: 2px rgba(250,250,250, 0) dashed;
+  }
+  .hide-help>svg{
+    visibility: hidden;
+  }
+  
+
+  .helper{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row; 
+    top: 100px;
+    position: relative;
+  }
+
+  /* .arrow-svg {
+    stroke: white;
+    filter: drop-shadow( 3px 3px 2px rgba(250, 250, 250, .7));
+  }
+ */
+  
