--- a/styles/Library.module.css
+++ b/styles/Library.module.css
@@ -1,5 +1,4 @@
 .range-wrap>input[type=range] {
-   /*  -webkit-appearance: none; */
     margin: 20px 0;
     width: 100%;
   }
@@ -10,8 +9,7 @@
     width: 100%;
     height: 4px;
     cursor: pointer;
-   /*  animate: 0.2s; */
-    background: #03a9f4;
+    background: #589e85;
     border-radius: 25px;
   }
   .range-wrap>input[type=range]::-webkit-slider-thumb {
@@ -24,37 +22,46 @@
     -webkit-appearance: none;
     margin-top: -8px;
   }
+
   .range-wrap>input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #03a9f4;
+    background: #589e85;
   }
+
   .range-wrap{
     width: 500px;
     position: relative;
+    display: flex;  
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
+
   .range-value{
     position: absolute;
     top: -50%;
   }
+
   .range-value span{
     width: 30px;
     height: 24px;
     line-height: 24px;
     text-align: center;
-    background: #03a9f4;
+    background: #589e85;
     color: #fff;
     font-size: 12px;
     display: block;
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
-    border-radius: 6px;
+    border-radius: 6px;  
+    filter: drop-shadow(1px 1px 1px rgba(250,250,250,0.7));
   }
+
   .range-value span:before{
     content: "";
     position: absolute;
     width: 0;
     height: 0;
-    border-top: 10px solid #03a9f4;
+    border-top: 10px solid #589e85;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
     top: 100%;
@@ -67,23 +74,55 @@
   .available-list{
     margin-top: 1.5rem;
     width: 60%;
-    background-color: rgba(70,70,70, 0.8);
+    background-color: rgba(17,17,17, 0.8);
     border-radius: 10px;
-    box-shadow: 8px 8px 4px rgba(150,150,150, 1);
+    box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
     padding: 16px;
   }
 
   .readable-list{
     margin-top: 1.5rem;
     width: 25%;
-    background-color: rgba(70,70,70, 0.8);
+    background-color: rgba(17,17,17, 0.8);
     border-radius: 10px;
-    box-shadow: 8px 8px 4px rgba(150,150,150, 1);
+    box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
     padding: 16px;
   }
 
   .filters{
     width: 100%;
+    background-color: rgba(17,17,17, 0.9);
+    border-radius: 10px;
+    box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
+    padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .filter-pages-container{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .label {
+    width: 100%;
+    margin-bottom: 25px;
+  }
+
+  .span {
+    position: relative;
+    top: 5px;
+    margin: 5px;
+  }
+
+  .select{
+    border: none;
+    border-radius: 5px;
+    padding-left: 0.5rem;
+    filter: drop-shadow(1px 1px 1px white);
+  }
+
+  .h3{
+    margin: 0.5rem 0;
   }
 
   .help-span{   
