--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1,14 +1,24 @@
 .main {
   display: flex;
-
   flex-direction: column;
-  justify-content: space-between;
-  /* align-items: center; */
-  padding: 6rem;
+  justify-content: space-between;  
+  padding: 2rem 6rem;
   min-height: 100vh;
   background-image: url('../src/library1.jpg');
   background-size: cover;
   background-attachment: fixed;
+}
+
+.header{
+  text-align: center;
+  padding: 1rem 0;
+  background-image:linear-gradient(rgba(17,17,17,1) 80%, rgba(40,40,40, 0.3) 85%) ;
+  border-bottom: 1px rgba(255,255,255, 0.5) solid;
+}
+
+.header-container>img{
+  width: 350px;
+  height: auto;
 }
 
 .description {
@@ -32,7 +42,7 @@
   gap: 0.5rem;
 }
 
-.description p {
+/* .description p {
   position: relative;
   margin: 0;
   padding: 1rem;
@@ -77,8 +87,8 @@
   font-size: 0.9rem;
   line-height: 1.5;
   max-width: 30ch;
-}
-
+} */
+/* 
 .center {
   display: flex;
   justify-content: center;
@@ -110,12 +120,12 @@
   filter: blur(45px);
   transform: translateZ(0);
 }
-
-.logo {
+ */
+/* .logo {
   position: relative;
-}
+} */
 /* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
+/* @media (hover: hover) and (pointer: fine) {
   .card:hover {
     background: rgba(var(--card-rgb), 0.1);
     border: 1px solid rgba(var(--card-border-rgb), 0.15);
@@ -130,10 +140,10 @@
   .card:hover span {
     transform: none;
   }
-}
+} */
 
 /* Mobile */
-@media (max-width: 700px) {
+/* @media (max-width: 700px) {
   .content {
     padding: 4rem;
   }
@@ -207,10 +217,10 @@
     );
     z-index: 1;
   }
-}
+} */
 
 /* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
+/* @media (min-width: 701px) and (max-width: 1120px) {
   .grid {
     grid-template-columns: repeat(2, 50%);
   }
@@ -234,3 +244,4 @@
     transform: rotate(0deg);
   }
 }
+ */
