--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -17,6 +17,7 @@
     box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
     padding: 16px;
     margin-bottom: 2rem;
+    line-height: 1.8rem;
 }
 
 .span{
@@ -24,34 +25,89 @@
     font-size: 1.5rem;
     text-decoration: underline;
     margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
+    display: block;
+}
+
+.about-technologies-info{
+  height: 10rem;
+}
+
+.about-technologies-logos{
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: center;  
+  margin-top: 1rem;
 }
 
 .img-logo{
     height: 64px; 
     top: 15%;
     position: relative;  
-    animation: logo_animation_reverse 0.2s ease-in-out 0s normal backwards;
+    animation: logo-animation-reverse 0.2s ease-in-out 0s normal backwards;
   }
 
   .img-logo:hover{
     height: 96px;
     top: 0%;
-    animation: logo_animation_640 0.4s ease-in-out 0s normal none;
+    animation: logo-animation-640 0.4s ease-in-out 0s normal none;
   }
+
 
   .developer-social-media>a>img{
     height: 32px;
     margin: 1rem 1rem;
   }
 
+  .about-developers-info{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 4rem;
+  }
+
+  .about-developer-avatar-name {
+    width: 25%;
+    display: inline-block;
+    margin-left: 8vw;
+    text-align: center;
+  }
+
+  .developer-name{
+    font-size: 2rem;
+  }
+  .developer-titles{
+    font-size: 1.5rem;
+  }
+
+  .about-developers-person {   
+    width: 60%;
+    position: relative;
+    text-align: start;
+  }
+/* 
+  .about-developers {
+    display: inline-block;
+  }
+
+  .about-developers-info>div{
+    text-align: center;    
+  }
   
+ 
+
+ 
+   */
   .about-avatar {
     clip-path: circle(50% at 50% 50%);
     width: 15vw;
   }
 
+
+
   
-  @keyframes logo_animation_640 {
+  @keyframes logo-animation-640 {
     0%{
       height: 64px;
       top: 15%;
@@ -64,7 +120,7 @@
   }
 
   
-  @keyframes logo_animation_reverse {
+  @keyframes logo-animation-reverse {
     0%{
       height: 96px;
       top: 0%;
