--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -39,8 +39,7 @@
   font-size: 0.85rem;
   max-width: var(--max-width);
   width: 100%;
-  z-index: 2;
-  /* font-family: var(--font-mono); */
+  z-index: 2;  
 }
 
 .description a {
@@ -50,6 +49,17 @@
   gap: 0.5rem;
 }
 
+
+.footer{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  padding: 2.5rem 0 2.5rem 0;
+  background-image:linear-gradient(rgba(40,40,40, 0.3) 15%, rgba(17,17,17,1) 20%) ;
+  border-top: 1px rgba(255,255,255, 0.5) solid;
+}
 /* .description p {
   position: relative;
   margin: 0;
