--- a/styles/Library.module.css
+++ b/styles/Library.module.css
@@ -144,20 +144,21 @@
       border: 2px rgba(250,250,250, 1) dashed;
     }
   }
-
+/* 
   .arrow-help{
     background-color: green;
     border: white 3px solid;
     clip-path: polygon(0 0,33% 0, 66% 50%, 33% 100%, 0 100%, 33% 50%);
     width: 50px;
     height: 50px;
-  }
+  } */
 
   .hide-help{
     animation: none;
     border: 2px rgba(250,250,250, 0) dashed;
   }
-  .hide-help>svg{
+
+  .hide-help>.arrow-div{
     visibility: hidden;
   }
   
@@ -165,11 +166,15 @@
   .helper{
     display: flex;
     flex-wrap: nowrap;
-    flex-direction: row; 
-    top: 100px;
+    flex-direction: column; 
+    top: 150px;
     position: relative;
+    gap: 4rem;
   }
 
+  .arrow-reverse{
+    transform: scaleX(-1);
+  }
   /* .arrow-svg {
     stroke: white;
     filter: drop-shadow( 3px 3px 2px rgba(250, 250, 250, .7));
