--- a/styles/Library.module.css
+++ b/styles/Library.module.css
@@ -1,183 +1,255 @@
 .range-wrap>input[type=range] {
-    margin: 20px 0;
-    width: 100%;
-  }
-  .range-wrap>input[type=range]:focus {
-    outline: none;
-  }
-  .range-wrap>input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 4px;
-    cursor: pointer;
-    background: #589e85;
-    border-radius: 25px;
-  }
-  .range-wrap>input[type=range]::-webkit-slider-thumb {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    background: #fff;
-    box-shadow: 0 0 4px 0 rgba(0,0,0, 1);
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -8px;
-  }
+  margin: 20px 0;
+  width: 100%;
+}
 
-  .range-wrap>input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #589e85;
-  }
+.range-wrap>input[type=range]:focus {
+  outline: none;
+}
 
-  .range-wrap{
-    width: 500px;
+.range-wrap>input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 4px;
+  cursor: pointer;
+  background: #589e85;
+  border-radius: 25px;
+}
+
+.range-wrap>input[type=range]::-webkit-slider-thumb {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: #fff;
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 1);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -8px;
+}
+
+.range-wrap>input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #589e85;
+}
+
+@media screen and (min-width: 360px) {
+  .range-wrap {
+    width: 50vw;
     position: relative;
-    display: flex;  
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
   }
+}
 
-  .range-value{
-    position: absolute;
-    top: -50%;
+@media screen and (min-width: 768px) {
+  .range-wrap {
+    width: 500px;
+  }
+}
+
+.range-value {
+  position: absolute;
+  top: -50%;
+}
+
+.range-value span {
+  width: 30px;
+  height: 24px;
+  line-height: 24px;
+  text-align: center;
+  background: #589e85;
+  color: #fff;
+  font-size: 12px;
+  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  border-radius: 6px;
+  filter: drop-shadow(1px 1px 1px rgba(250, 250, 250, 0.7));
+}
+
+.range-value span:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 10px solid #589e85;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  margin-top: -1px;
+}
+
+
+@media screen and (min-width: 360px) {
+  .available-list {
+    margin-top: 1.5rem;
+    width: 130%;
+    background-color: rgba(17, 17, 17, 0.8);
+    border-radius: 10px;
+    box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
+    padding: 16px;
+    grid-area: book;
   }
 
-  .range-value span{
-    width: 30px;
-    height: 24px;
-    line-height: 24px;
-    text-align: center;
-    background: #589e85;
-    color: #fff;
-    font-size: 12px;
-    display: block;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0);
-    border-radius: 6px;  
-    filter: drop-shadow(1px 1px 1px rgba(250,250,250,0.7));
+  .readable-list {
+    margin-top: 1.5rem;
+    width: 90%;   
+    grid-area: read;
+    background-color: rgba(17, 17, 17, 0.8);
+    border-radius: 10px;
+    box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
+    padding: 1.5rem;
+    position: relative;    
+    left: 30vw;
   }
+  
+}
 
-  .range-value span:before{
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-top: 10px solid #589e85;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    margin-top: -1px;
-  }
-
-
-  .available-list{
+@media screen and (min-width: 768px) {
+  .available-list {
     margin-top: 1.5rem;
     width: 60%;
-    background-color: rgba(17,17,17, 0.8);
-    border-radius: 10px;
-    box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
     padding: 16px;
   }
 
-  .readable-list{
+  .readable-list {
     margin-top: 1.5rem;
-    width: 25%;
-    background-color: rgba(17,17,17, 0.8);
-    border-radius: 10px;
-    box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
-    padding: 16px;
+    width: 25%;    
+    grid-area: read;
+    left: 0%;
+    padding: 1.5rem;
   }
+}
 
-  .filters{
+
+
+
+@media screen and (min-width: 360px) {
+  .filters {
     width: 100%;
-    background-color: rgba(17,17,17, 0.9);
+    background-color: rgba(17, 17, 17, 0.9);
     border-radius: 10px;
     box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
+    padding: 1rem 0.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 1rem;
+    grid-area: filter;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filters {
     padding: 1rem;
-    display: flex;
-    flex-wrap: wrap;
   }
+}
 
-  .filter-pages-container{
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .label {
-    width: 100%;
-    margin-bottom: 25px;    
-  }
 
+
+.filter-pages-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.label {
+  width: 100%;
+  margin-bottom: 25px;
+}
+
+@media screen and (min-width: 360px) {
   .span {
     position: relative;
     top: 5px;
     margin: 5px;
+    font-size: 0.7rem;
   }
 
-  .select{
-    border: none;
-    border-radius: 5px;
-    padding-left: 0.5rem;   
-    filter: drop-shadow(1px 1px 1px white);
+  .help-span{
+    animation: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .span {
+    font-size: 0.85rem;
   }
 
-  .h3{
-    margin: 0.5rem 0;
-  }
-
-  .help-span{   
+  .help-span {
     width: 100%;
     display: block;
     border-radius: 10px;
     animation: flash-help 1s ease-in-out 0s infinite;
-    border: 2px rgba(250,250,250, 1) dashed;
+    border: 2px rgba(88, 158, 133, 1) dashed;
+    padding: 0.5rem;
+  }
+}
+
+
+.select {
+  border: none;
+  border-radius: 5px;
+  padding-left: 0.5rem;
+  filter: drop-shadow(1px 1px 1px white);
+}
+
+.h3 {
+  margin: 0.5rem 0;
+}
+
+
+
+@keyframes flash-help {
+  50% {
+    border: 2px rgba(250, 250, 250, 0) dashed;
   }
 
-  @keyframes flash-help {
-   /*  0% {
-      border: 2px rgba(250,250,250, 1) dashed;
-    } */
-    50% {
-      border: 2px rgba(250,250,250, 0) dashed;
-    }
-    100%{
-      border: 2px rgba(250,250,250, 1) dashed;
-    }
+  100% {
+    border: 2px rgba(88, 158, 133, 1) dashed;
   }
-/* 
-  .arrow-help{
-    background-color: green;
-    border: white 3px solid;
-    clip-path: polygon(0 0,33% 0, 66% 50%, 33% 100%, 0 100%, 33% 50%);
-    width: 50px;
-    height: 50px;
-  } */
+}
 
-  .hide-help{
-    animation: none;
-    border: 2px rgba(250,250,250, 0) dashed;
+
+@media screen and (min-width: 360px) {
+  .helper {
+    display: none;
   }
+}
 
-  .hide-help>.arrow-div{
-    visibility: hidden;
-  }
-  
-
-  .helper{
+@media screen and (min-width: 768px) {
+  .helper {
     display: flex;
     flex-wrap: nowrap;
-    flex-direction: column; 
+    flex-direction: column;
+    align-items: center;
     top: 150px;
     position: relative;
     gap: 4rem;
+    grid-area: help;
+    width: 15%;
   }
 
-  .arrow-reverse{
-    transform: scaleX(-1);
+ 
+  .hide-help {
+    animation: none;
+    border: 2px rgba(250, 250, 250, 0) dashed;
   }
-  /* .arrow-svg {
-    stroke: white;
-    filter: drop-shadow( 3px 3px 2px rgba(250, 250, 250, .7));
-  }
- */
   
+  .arrow-div {
+    visibility: hidden;
+    transform: scaleX(0.8);
+    width: max-content;
+    position: relative;
+    text-align: center;
+    left: 0.5vw;
+  }
+
+  .arrow-reverse {
+    transform: scaleX(-0.8);
+    left: 0;
+    
+  }
+}
+
