--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1,45 +1,68 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;  
-  padding: 2rem 6rem;
-  min-height: 100vh;
-  background-image: url('../src/library1.jpg');
-  background-size: cover;
-  background-attachment: fixed;
+@media screen and (min-width: 360px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;  
+    padding: 2rem 3rem;
+    min-height: 100vh;
+    background-image: url('../src/library1.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+  }
 }
 
-.header{
-  text-align: center;
-  padding: 0.5rem 0 1rem 0;
-  background-image:linear-gradient(rgba(17,17,17,1) 80%, rgba(40,40,40, 0.3) 85%) ;
-  border-bottom: 1px rgba(255,255,255, 0.5) solid;
+@media screen and (min-width: 768px) {
+  .main { 
+    padding: 2rem 6rem;  
+  }
 }
 
-.header-logo>a>img{
-  width: 350px;
-  height: auto;
+
+
+@media screen and (min-width : 360px) {
+  .header{
+    text-align: center;
+    padding: 0.5rem 0 1rem 0;
+    background-image:linear-gradient(rgba(17,17,17,1) 80%, rgba(40,40,40, 0.3) 85%) ;
+    border-bottom: 1px rgba(255,255,255, 0.5) solid;
+  }
+  
+  .header-logo>a>img{
+    width: 50vw;
+    height: auto;
+  }
+  
+  .header-link{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 1rem;
+    font-size: 0.8rem;
+  }
 }
 
-.header-link{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 0 2rem;
+@media screen and (min-width: 768px) {
+  .header-logo>a>img{
+    width: 350px;
+  }
+  .header-link{ 
+    padding: 0 2rem;
+    font-size: 1rem;
+  }
 }
 
+
+@media screen and (min-width: 360px) {  
 .description {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-
-  justify-content: inherit;
-  align-items: start;
+  display: grid;
+  grid-template-areas: "filter filter filter"
+                       "book  help read";  
   font-size: 0.85rem;
   max-width: var(--max-width);
   width: 100%;
   z-index: 2;  
+  overflow-x: unset;
 }
 
 .description a {
@@ -48,6 +71,19 @@
   align-items: center;
   gap: 0.5rem;
 }
+  
+}
+
+@media screen and (min-width: 768px) {
+  .description {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: inherit;
+    align-items: start;    
+  }
+}
+
 
 
 .footer{
@@ -60,6 +96,7 @@
   background-image:linear-gradient(rgba(40,40,40, 0.3) 15%, rgba(17,17,17,1) 20%) ;
   border-top: 1px rgba(255,255,255, 0.5) solid;
 }
+
 /* .description p {
   position: relative;
   margin: 0;
