--- a/styles/Library.module.css
+++ b/styles/Library.module.css
@@ -85,12 +85,14 @@
 @media screen and (min-width: 360px) {
   .available-list {
     margin-top: 1.5rem;
-    width: 130%;
+    width: calc(100vw - 8rem);
     background-color: rgba(17, 17, 17, 0.8);
     border-radius: 10px;
     box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
     padding: 16px;
     grid-area: book;
+
+    /* visibility: hidden; */
   }
 
   .readable-list {
@@ -103,6 +105,8 @@
     padding: 1.5rem;
     position: relative;    
     left: 30vw;
+
+    left: 0;
   }
   
 }
@@ -129,6 +133,7 @@
 @media screen and (min-width: 360px) {
   .filters {
     width: 100%;
+    max-width: calc(100vw - 6rem);
     background-color: rgba(17, 17, 17, 0.9);
     border-radius: 10px;
     box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
