--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -2,7 +2,7 @@
   .main {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;  
+    justify-content: space-between;
     padding: 2rem 3rem;
     min-height: 100vh;
     background-image: url('../src/library1.jpg');
@@ -12,27 +12,27 @@
 }
 
 @media screen and (min-width: 768px) {
-  .main { 
-    padding: 2rem 6rem;  
+  .main {
+    padding: 2rem 6rem;
   }
 }
 
 
 
 @media screen and (min-width : 360px) {
-  .header{
+  .header {
     text-align: center;
     padding: 0.5rem 0 1rem 0;
-    background-image:linear-gradient(rgba(17,17,17,1) 80%, rgba(40,40,40, 0.3) 85%) ;
-    border-bottom: 1px rgba(255,255,255, 0.5) solid;
+    background-image: linear-gradient(rgba(17, 17, 17, 1) 80%, rgba(40, 40, 40, 0.3) 85%);
+    border-bottom: 1px rgba(255, 255, 255, 0.5) solid;
   }
-  
-  .header-logo>a>img{
+
+  .header-logo>a>img {
     width: 50vw;
     height: auto;
   }
-  
-  .header-link{
+
+  .header-link {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -43,35 +43,43 @@
 }
 
 @media screen and (min-width: 768px) {
-  .header-logo>a>img{
+  .header-logo>a>img {
     width: 350px;
   }
-  .header-link{ 
+
+  .header-link {
     padding: 0 2rem;
     font-size: 1rem;
   }
 }
 
 
-@media screen and (min-width: 360px) {  
-.description {
-  display: grid;
-  grid-template-areas: "filter filter filter"
-                       "book  help read";  
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;  
-  overflow-x: unset;
-}
+@media screen and (min-width: 360px) {
+  .description {
+    display: grid;
+    grid-template-areas: "filter filter"
+                       "book read";  
+    /* display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: inherit;
+    align-items: start; */
 
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-  
+    font-size: 0.85rem;
+    max-width: var(--max-width);
+    width: 100%;
+    z-index: 2;
+    overflow-x: unset;
+  }
+
+  .description a {
+    display: inline-block;
+    /* display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem; */
+  }
+
 }
 
 @media screen and (min-width: 768px) {
@@ -80,21 +88,21 @@
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: inherit;
-    align-items: start;    
+    align-items: start;
   }
 }
 
 
 
-.footer{
+.footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
   padding: 2.5rem 0 2.5rem 0;
-  background-image:linear-gradient(rgba(40,40,40, 0.3) 15%, rgba(17,17,17,1) 20%) ;
-  border-top: 1px rgba(255,255,255, 0.5) solid;
+  background-image: linear-gradient(rgba(40, 40, 40, 0.3) 15%, rgba(17, 17, 17, 1) 20%);
+  border-top: 1px rgba(255, 255, 255, 0.5) solid;
 }
 
 /* .description p {
