css style for responsive home page and book details page

--- a/styles/BookDetail.module.css
+++ b/styles/BookDetail.module.css
@@ -1,55 +1,121 @@
+@media screen and (min-width: 360px) {
+    .main {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 2rem 2rem;
+        min-height: 100vh;
+        background-image: url('../src/library1.jpg');
+        background-size: cover;
+        background-attachment: fixed;
+    }
 
-.main{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;  
-    padding: 2rem 10rem;
-    min-height: 100vh;
-    background-image: url('../src/library1.jpg');
-    background-size: cover;
-    background-attachment: fixed;
+    .book {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        background-color: rgba(17, 17, 17, 0.8);
+        border-radius: 10px;
+        box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
+        padding: 16px;
+    }
+
+    .book-info {
+        width: 100%;
+    }
+
+    .book>img {
+        max-width: 250px;
+        margin: 1rem auto;
+    }
+
+    .h2 {
+        display: none;
+    }
+
+    .h2-360 {
+        font-size: 1.8rem;
+        padding-left: 0;
+        text-align: center;
+    }
+
 }
 
-.book{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    background-color: rgba(17,17,17, 0.8);
-    border-radius: 10px;
-    box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
-    padding: 16px;
+@media screen and (min-width: 640px) {
+    .main {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 2rem 3rem;
+        min-height: 100vh;
+    }
+
+    .book {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        padding: 16px;
+        gap: 1rem;
+    }
+
+    .book-info {
+        width: 50%;
+    }
+
+    .book>img {
+        max-width: 250px;
+        /*  width: 50%; */
+    }
+
+    .h2-360 {
+        display: none;
+    }
+
+    .h2 {
+        font-size: 1.8rem;
+        padding-left: 5vw;
+    }
 }
 
-.book-info{
-    width: 50%;
+@media screen and (min-width: 900px) {
+    .main {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 2rem 6rem;
+        min-height: 100vh;
+    }
+
+    .h2 {
+        font-size: 2rem;
+        padding-left: 5vw;
+    }
+
+    .book>img {
+        margin: 0;
+
+    }
 }
 
-.h2{
-    font-size: 2rem;
-    padding-left: 8rem;
-}
 
-.underline{
+.underline {
     text-decoration: underline;
     font-weight: 700;
 }
-.book >img {
-    max-width: 250px;
-    width: 50%;
-}
 
 
-.author{
+.author {
     margin-top: 2rem;
 }
 
-.ul{
+.ul {
     padding-left: 2rem;
     margin-top: 0.5rem;
 }
 
-.li{
+.li {
     list-style-type: none;
     font-style: italic;
     padding-left: 1.5rem;
