--- a/styles/ReadableList.module.css
+++ b/styles/ReadableList.module.css
@@ -8,13 +8,9 @@
         box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
         padding: 1.5rem;
         position: relative;
-        /* left: 30vw;
-
-        left: 0; */
-
         display: flex;
         flex-direction: row;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
     }
 
     .show-readable{
@@ -22,11 +18,14 @@
         right: calc(100vw - 8rem);
         z-index: 10;
         width: calc(100vw - 6rem);
+        background-color: rgba(17, 17, 17, 1);
+        align-content: flex-start;
+        height: max-content;
     }
 
     .hide-readable{
         position: relative;
-        left: 2rem;
+        left: 2.4rem;
     }
 
     .title-icon {
@@ -37,6 +36,14 @@
         justify-content: flex-start;
         align-content: stretch;
         align-items: baseline;
+    }
+
+    .title-icon-show {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: center;
     }
 
     .hide-item {
@@ -50,11 +57,70 @@
         font-size: 1.3rem;
     }
 
-    .h3 {
+    .h3-hide {
         transform: rotate(-90deg);
         width: max-content;
         position: relative;
         top: 6rem;
         left: -3.7rem;
     }
+
+    .h3-show{
+        margin: 0.5rem 0;
+        transform: rotate(0deg);
+        width: max-content;
+        position: relative;
+        top: 0;
+        left: 0;
+    }
 }
+
+@media screen and (min-width: 768px) {
+    .readable-list {
+        margin-top: 1.5rem;
+        width: 25%;    
+        grid-area: read;
+        left: 0%;
+        padding: 1.5rem 0;
+      }
+    
+      .h3 {
+        margin: 0.5rem 0;
+        transform: rotate(0deg);
+        width: max-content;
+        position: relative;
+        top: 0;
+        left: 0;
+      }
+
+      @media screen and (min-width: 768px) {
+        /* .span {
+          font-size: 0.85rem;
+        } */
+      
+        .help-span {
+          width: 100%;
+          display: block;
+          border-radius: 10px;
+          animation: flash-help 1s ease-in-out 0s infinite;
+          border: 2px rgba(88, 158, 133, 1) dashed;
+          padding: 0.5rem;
+        }
+      }
+
+      .hide-help {
+        animation: none;
+        border: 2px rgba(250, 250, 250, 0) dashed;
+      }
+}
+
+
+@keyframes flash-help {
+    50% {
+      border: 2px rgba(250, 250, 250, 0) dashed;
+    }
+  
+    100% {
+      border: 2px rgba(88, 158, 133, 1) dashed;
+    }
+  }
