--- a/styles/HelpPopUp.module.css
+++ b/styles/HelpPopUp.module.css
@@ -38,5 +38,21 @@
     border: 1px solid #cfcece;
   }
 
+  @media screen and (min-width: 360px) {
+    .content{
+      font-size: 0.7rem;
+      line-height: 1.2rem;
+  }
+    
+  }
+
+  @media screen and (min-width: 640px) {
+    .content{
+      font-size: 0.8rem;
+      line-height: 1.7rem;
+  }
+    
+  }
+
 
   /****************/
