--- a/styles/Library.module.css
+++ b/styles/Library.module.css
@@ -92,29 +92,13 @@
     padding: 16px;
     grid-area: book;
     height: max-content;
-
-    /* visibility: hidden; */
   }
 
   .available-hide{
     visibility: hidden;
     height: 0;
   }
-
-  /* .readable-list {
-    margin-top: 1.5rem;
-    width: 90%;   
-    grid-area: read;
-    background-color: rgba(17, 17, 17, 0.8);
-    border-radius: 10px;
-    box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.7);
-    padding: 1.5rem;
-    position: relative;    
-    left: 30vw;
-
-    left: 0;
-  } */
-  
+ 
 }
 
 @media screen and (min-width: 768px) {
@@ -123,14 +107,6 @@
     width: 60%;
     padding: 16px;
   }
-
-  /* .readable-list {
-    margin-top: 1.5rem;
-    width: 25%;    
-    grid-area: read;
-    left: 0%;
-    padding: 1.5rem;
-  } */
 }
 
 
@@ -157,8 +133,6 @@
     padding: 1rem;
   }
 }
-
-
 
 .filter-pages-container {
   display: flex;
@@ -249,7 +223,7 @@
   }
   
   .arrow-div {
-    visibility: hidden;
+    /* visibility: hidden; */
     transform: scaleX(0.8);
     width: max-content;
     position: relative;
@@ -261,6 +235,10 @@
     transform: scaleX(-0.8);
     left: 0;
     
+  }
+
+  .hide-arrow{
+    visibility: hidden;
   }
 }
 
