--- a/styles/ModalPopUp.css
+++ b/styles/ModalPopUp.css
@@ -1,12 +1,22 @@
-.popup-content {
-    margin: auto;
-    background: #282828EE;
-    width: 50%;
-    padding: 5px;
-    border-radius: 5px;
-    border: 1px solid #d7d7d7;
-    bottom: 5rem;
+@media screen and (min-width: 360px) {
+    .popup-content {        
+        margin: auto;
+        background: #282828EE;
+        width: 85%;
+        padding: 5px;
+        border-radius: 5px;
+        border: 1px solid #d7d7d7;
+        bottom: 5rem;
+        top: 0.5rem;        
+    }
 }
+
+@media screen and (min-width: 768px) {
+    .popup-content {       
+        width: 50%;       
+    }
+}
+
 
 [role=tooltip].popup-content {
     width: 200px;
@@ -35,3 +45,4 @@
     top: 0;
     bottom: 0
 }
+
