--- a/styles/BookList.module.css
+++ b/styles/BookList.module.css
@@ -16,6 +16,7 @@
 @media screen and (min-width: 360px) {
     .book {
         width: min-content;
+        filter: drop-shadow(8px 8px 2px black);
     }
 
     .droppableRead-img {
